[gd_scene load_steps=3 format=3 uid="uid://b2munlcwq4dyt"]

[ext_resource type="Script" uid="uid://da7f82lyicmjt" path="res://addons/AudioCafe/scripts/cafe_audio_manager.gd" id="1_3sx8q"]
[ext_resource type="AudioStream" uid="uid://bl81gqjl045np" path="res://addons/AudioCafe/dist/playlists/8-bit_jingles_playlist.tres" id="2_h62if"]

[node name="CafeAudioManager" type="Node"]
script = ExtResource("1_3sx8q")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_h62if")
mix_target = 1

[node name="MusicChangeTimer" type="Timer" parent="."]
wait_time = 300.0

[node name="SFXPlayer" type="Node" parent="."]

[node name="SFXPlayer_0" type="AudioStreamPlayer" parent="SFXPlayer"]

[node name="SFXPlayer_1" type="AudioStreamPlayer" parent="SFXPlayer"]

[node name="SFXPlayer_2" type="AudioStreamPlayer" parent="SFXPlayer"]

[node name="SFXPlayer_3" type="AudioStreamPlayer" parent="SFXPlayer"]

[node name="SFXPlayer_4" type="AudioStreamPlayer" parent="SFXPlayer"]
